<resources>
    <string name="app_name">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="equals">=</string>
    <string name="divide">/</string>
    <string name="times">*</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="point">.</string>
    <string name="numbers">Enter a Value to calculate</string>
    <string name="calculator">Calculator</string>
    <string name="please_enter_a_value">Please enter a value</string>
</resources>