<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbertext"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearbutton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="clearbtn"
                android:text="@string/clear"
                android:textSize="20sp" />

            <Button
                android:id="@+id/equalsbutton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="equalsbtn"
                android:text="@string/equals"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dividebutton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="dividebtn"
                android:text="@string/divide"
                android:textSize="20sp" />

            <Button
                android:id="@+id/timesbutton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:onClick="timesbtn"
                android:text="@string/times"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonseven"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sevenbtn"
                android:text="@string/seven"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttoneight"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="eightbtn"
                android:text="@string/eight"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonnine"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="ninebtn"
                android:text="@string/nine"
                android:textSize="20sp" />

            <Button
                android:id="@+id/minusbutton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="minusbtn"
                android:text="@string/minus"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonfour"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fourbtn"
                android:text="@string/four"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonfive"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="fivebtn"
                android:text="@string/five"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonsix"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="sixbtn"
                android:text="@string/six"
                android:textSize="20sp" />

            <Button
                android:id="@+id/addbutton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="addbtn"
                android:text="@string/add"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonone"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="onebtn"
                android:text="@string/one"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttontwo"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="twobtn"
                android:text="@string/two"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonthree"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="threebtn"
                android:text="@string/three"
                android:textSize="20sp" />

            <Button
                android:id="@+id/pointbutton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:onClick="dotbtn"
                android:text="@string/point"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="90dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonzero"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:onClick="zerobtn"
                android:text="@string/zero"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

<!--    <TextView-->
<!--        android:id="@+id/numbertext"-->
<!--        android:layout_width="412dp"-->
<!--        android:layout_height="70dp"-->
<!--        android:layout_marginTop="112dp"-->
<!--        android:autofillHints="false"-->
<!--        android:inputType="none"-->
<!--        android:text=""-->
<!--        android:textAlignment="textEnd"-->
<!--        android:textSize="28sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


    <EditText
        android:id="@+id/numberanswer"
        android:layout_width="363dp"
        android:layout_height="87dp"
        android:autofillHints="false"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <EditText
        android:id="@+id/numbertext"
        android:layout_width="361dp"
        android:layout_height="94dp"
        android:layout_marginTop="72dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/please_enter_a_value"
        android:textAlignment="textEnd"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="87dp"
        android:layout_height="57dp"
        android:layout_margin="5dp"
        android:background="@drawable/round"
        android:contentDescription="none"
        android:onClick="backbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/numbertext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />
</androidx.constraintlayout.widget.ConstraintLayout>